--- a/FakeIP-Config.yaml
+++ b/FakeIP-Config.yaml
@@ -128,43 +128,46 @@ dns:
     - 8.8.8.8
   # 模式fake-ip  or  redir-host
   enhanced-mode: fake-ip
-  # fake-ip 模式仅有
-  fake-ip-range: 198.18.0.1/16
   # 使用本地hosts文件
   use-hosts: true
   # 国内用下列DNS解析
   nameserver:
-    - 'tls://dns.alidns.com'
-    - 'tls://doh.pub'
-    - 'tls://dns.pub'
-    - 'tls://dot.360.cn'
-    - 'tls://dns.cfiec.net'
-    - 'https://dns.alidns.com/dns-query'
-    - 'https://doh.pub/dns-query'
-    - 'https://dns.pub/dns-query'
-    - 'https://doh.360.cn/dns-query'
-    - 'https://dns.cfiec.net/dns-query'
-    - 'https://rubyfish.cn/dns-query'
-    - 'https://dns.rubyfish.cn/dns-quer'
+    - 101.6.6.6
+    - tls://dns.alidns.com
+    - tls://doh.pub
+    - tls://dns.pub
+    - tls://dot.360.cn
+    - tls://dns.cfiec.net
+    - https://dns.alidns.com/dns-query
+    - https://doh.pub/dns-query
+    - https://dns.pub/dns-query
+    - https://doh.360.cn/dns-query
+    - https://dns.cfiec.net/dns-query
+    - https://rubyfish.cn/dns-query
+    - https://dns.rubyfish.cn/dns-quer
   # 国内用下列DNS解析
   fallback:
-    - 'tls://dns.google'
-    - 'https://dns.google/dns-query'
-    - 'https://dns.google/resolve'
-    - 'https://dns.quad9.net/dns-query'
-    - 'https://dns11.quad9.net/dns-query'
-    - 'https://doh.opendns.com/dns-query'
-    - 'https://doh.familyshield.opendns.com/dns-query'
-    - 'https://cloudflare-dns.com/dns-query'
-    - 'https://1.1.1.1/dns-query'
-    - 'https://1.0.0.1/dns-query'
-    - 'https://dns.adguard.com/dns-query'
-    - 'https://dns-family.adguard.com/dns-query'
-    - 'https://doh.dns.sb/dns-query'
-    - 'https://doh.cleanbrowsing.org/doh/family-filter/'
-    - 'https://doh.powerdns.org'
-    - 'https://public.dns.iij.jp/dns-query'
-    - 'https://doh-jp.blahdns.com/dns-query'
+    - tls://dns.google
+    - tls://1dot1dot1dot1.cloudflare-dns.com
+    - tls://one.one.one.one
+    - tls://dot.sb
+    - https://dns.google/dns-query
+    - https://dns.google/resolve
+    - https://dns.quad9.net/dns-query
+    - https://dns11.quad9.net/dns-query
+    - https://doh.opendns.com/dns-query
+    - https://doh.familyshield.opendns.com/dns-query
+    - https://cloudflare-dns.com/dns-query
+    - https://1.1.1.1/dns-query
+    - https://1.0.0.1/dns-query
+    - https://dns.adguard.com/dns-query
+    - https://dns-family.adguard.com/dns-query
+    - https://doh.dns.sb/dns-query
+    - https://doh.cleanbrowsing.org/doh/family-filter/
+    - https://doh.powerdns.org
+    - https://public.dns.iij.jp/dns-query
+    - https://doh-jp.blahdns.com/dns-query
+    - https://dns64.dns.google/dns-query
   # fake-ip仅有
   fake-ip-filter:
     - '*.126.net'
