--- a/Rules-Complete/Provider/Scholar.yaml
+++ b/Rules-Complete/Provider/Scholar.yaml
@@ -62,6 +62,7 @@ payload:
   - DOMAIN-SUFFIX,sciencemag.org
   - DOMAIN-SUFFIX,scitation.org
   - DOMAIN-SUFFIX,scopus.com
+  - DOMAIN-SUFFIX,semanticscholar.org
   - DOMAIN-SUFFIX,siam.org
   - DOMAIN-SUFFIX,spiedigitallibrary.org
   - DOMAIN-SUFFIX,springer.com
@@ -199,3 +200,4 @@ payload:
   - DOMAIN-SUFFIX,wanfangdata.com
   - DOMAIN-SUFFIX,westlawchina.com
   - DOMAIN-SUFFIX,yale.edu
+  
