--- a/Rules-Complete/Provider/Special.yaml
+++ b/Rules-Complete/Provider/Special.yaml
@@ -32,8 +32,16 @@ payload:
   - PROCESS-NAME,ss-local
 
   # > Tesla
+  - DOMAIN,tesla-cdn.thron.cn
+  - DOMAIN,tesla-cdn.thron.com
+  - DOMAIN-SUFFIX,solarcity.com
   - DOMAIN-SUFFIX,tesla.cn
-  - DOMAIN-SUFFIX,tesla-cdn.thron.cn
+  - DOMAIN-SUFFIX,tesla.com
+  - DOMAIN-SUFFIX,tesla.com.cn
+  - DOMAIN-SUFFIX,teslamotors.cn
+  - DOMAIN-SUFFIX,teslamotors.com
+  - DOMAIN-SUFFIX,teslamotors.com.cn
+  - DOMAIN-SUFFIX,ts.la
 
   # > UUBooster
   - PROCESS-NAME,UUBooster
