--- a/Rules-Complete/Provider/Domestic.yaml
+++ b/Rules-Complete/Provider/Domestic.yaml
@@ -788,6 +788,9 @@ payload:
   - IP-CIDR,101.252.0.0/15,no-resolve
   - IP-CIDR,101.254.0.0/16,no-resolve
   - IP-CIDR,101.32.0.0/14,no-resolve
+  - IP-CIDR,101.32.104.0/21,no-resolve
+  - IP-CIDR,101.32.118.0/23,no-resolve
+  - IP-CIDR,101.32.96.0/20,no-resolve
   - IP-CIDR,101.33.128.0/17,no-resolve
   - IP-CIDR,101.33.16.0/24,no-resolve
   - IP-CIDR,101.33.20.0/22,no-resolve
@@ -5795,6 +5798,7 @@ payload:
   - IP-CIDR,129.211.192.0/20,no-resolve
   - IP-CIDR,129.211.64.0/18,no-resolve
   - IP-CIDR,129.223.254.0/24,no-resolve
+  - IP-CIDR,129.226.0.0/16,no-resolve
   - IP-CIDR,129.227.99.0/24,no-resolve
   - IP-CIDR,129.28.0.0/16,no-resolve
   - IP-CIDR,129.28.0.0/22,no-resolve
@@ -6980,6 +6984,7 @@ payload:
   - IP-CIDR,182.96.0.0/11,no-resolve
   - IP-CIDR,183.0.0.0/10,no-resolve
   - IP-CIDR,183.128.0.0/11,no-resolve
+  - IP-CIDR,183.131.48.0/20,no-resolve
   - IP-CIDR,183.160.0.0/13,no-resolve
   - IP-CIDR,183.168.0.0/15,no-resolve
   - IP-CIDR,183.170.0.0/16,no-resolve
