--- a/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/iQiyi.yaml
@@ -1,22 +1,50 @@
 payload:  
   # > iQiyi
-  - PROCESS-NAME,com.qiyi.video
-  - DOMAIN,intel-cache.m.iqiyi.com
-  - DOMAIN,intel-cache.video.iqiyi.com
-  - DOMAIN,intl-rcd.iqiyi.com
-  - DOMAIN,intl-subscription.iqiyi.com
+  # - USER-AGENT,*QIYI*
+  # - USER-AGENT,iQiYi*
+  # - USER-AGENT,iQIYI*
+  # - USER-AGENT,QIYIVideo*
+  # - USER-AGENT,QYPlayer*
+  # - USER-AGENT,QTP*
+  # - PROCESS-NAME,com.iqiyi.i18n
+  # - PROCESS-NAME,com.iqiyi.i18n.tv
+  - DOMAIN-KEYWORD,qiyi
+  - DOMAIN-SUFFIX,71.am
+  - DOMAIN-SUFFIX,gitv.tv
   - DOMAIN-SUFFIX,inter.iqiyi.com
   - DOMAIN-SUFFIX,inter.ptqy.gitv.tv
   - DOMAIN-SUFFIX,intl.iqiyi.com
   - DOMAIN-SUFFIX,iq.com
-  - IP-CIDR,23.211.15.99/32,no-resolve
+  - DOMAIN-SUFFIX,iqiyi.com
+  - DOMAIN-SUFFIX,iqiyipic.com
+  - DOMAIN-SUFFIX,qy.net
+  - DOMAIN,cache.video.iqiyi.com
+  - DOMAIN,intel-cache.m.iqiyi.com
+  - DOMAIN,intel-cache.video.iqiyi.com
+  - DOMAIN,intl-rcd.iqiyi.com
+  - DOMAIN,intl-subscription.iqiyi.com
   - IP-CIDR,103.5.34.153/32,no-resolve
   - IP-CIDR,104.109.129.153/32,no-resolve
+  - IP-CIDR,104.85.165.17/32,no-resolve
   - IP-CIDR,110.238.107.47/32,no-resolve
+  - IP-CIDR,118.26.32.162/32,no-resolve
   - IP-CIDR,118.26.32.178/32,no-resolve
-  - IP-CIDR,203.74.95.131/32,no-resolve
-  - IP-CIDR,203.74.95.139/32,no-resolve
+  - IP-CIDR,159.138.102.146/32,no-resolve
+  - IP-CIDR,184.51.102.0/24,no-resolve
   - IP-CIDR,203.211.4.169/32,no-resolve
   - IP-CIDR,203.211.4.193/32,no-resolve
-  - IP-CIDR,210.201.32.8/32,no-resolve
+  - IP-CIDR,203.74.95.130/28,no-resolve
+  - IP-CIDR,203.74.95.131/32,no-resolve
+  - IP-CIDR,203.74.95.139/32,no-resolve
+  - IP-CIDR,203.80.97.203/32,no-resolve
   - IP-CIDR,210.201.32.11/32,no-resolve
+  - IP-CIDR,210.201.32.8/32,no-resolve
+  - IP-CIDR,210.71.227.202/32,no-resolve
+  - IP-CIDR,23.200.145.146/32,no-resolve
+  - IP-CIDR,23.210.215.186/32,no-resolve
+  - IP-CIDR,23.211.15.0/24,no-resolve
+  - IP-CIDR,23.211.15.99/32,no-resolve
+  - IP-CIDR,23.219.172.0/24,no-resolve
+  - IP-CIDR,23.40.242.10/32,no-resolve
+  - IP-CIDR,23.59.252.0/24,no-resolve
+  - PROCESS-NAME,com.qiyi.video
