--- a/Rules-Complete/Provider/Game.yaml
+++ b/Rules-Complete/Provider/Game.yaml
@@ -499,6 +499,7 @@ payload:
   
   # > Steam
   # - USER-AGENT,Steam*
+  - DOMAIN-KEYWORD,steam
   - DOMAIN-KEYWORD,steambroadcast
   - DOMAIN-KEYWORD,steamstore
   - DOMAIN-KEYWORD,steamuserimages
@@ -522,6 +523,7 @@ payload:
   - DOMAIN-SUFFIX,steamcontent.com
   - DOMAIN-SUFFIX,steamcontent.tnkjmec.com
   - DOMAIN-SUFFIX,steamgames.com
+  - DOMAIN-SUFFIX,steampipe.akamaized.net
   - DOMAIN-SUFFIX,steampowered.com
   - DOMAIN-SUFFIX,steampowered.com.8686c.com
   - DOMAIN-SUFFIX,steamstat.us
