--- a/Rules-Complete/Provider/Proxy.yaml
+++ b/Rules-Complete/Provider/Proxy.yaml
@@ -303,6 +303,7 @@ payload:
   - DOMAIN-SUFFIX,nytimes.com
   - DOMAIN-SUFFIX,nytimg.com
   - DOMAIN-SUFFIX,nytstyle.com
+  - DOMAIN-SUFFIX,okx.com
   - DOMAIN-SUFFIX,omnigroup.com
   - DOMAIN-SUFFIX,ooyala.com
   - DOMAIN-SUFFIX,openvpn.net
