--- a/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Netflix.yaml
@@ -1,8 +1,11 @@
 payload:
   # > Netflix
+  - DOMAIN-KEYWORD,apiproxy-device-prod-nlb-
   - DOMAIN-KEYWORD,dualstack.apiproxy-
   - DOMAIN-KEYWORD,dualstack.ichnaea-web-
   - DOMAIN-KEYWORD,netflix
+  - DOMAIN-KEYWORD,netflixdnstest
+  - DOMAIN-SUFFIX,fast.com
   - DOMAIN-SUFFIX,netflix.com
   - DOMAIN-SUFFIX,netflix.com.edgesuite.net
   - DOMAIN-SUFFIX,netflix.net
