--- a/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
+++ b/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
@@ -6,5 +6,6 @@ payload:
   - DOMAIN-SUFFIX,bahamut.com.tw
   - DOMAIN-SUFFIX,gamer.com.tw
   - DOMAIN-SUFFIX,hinet.net
+  - DOMAIN,bahamut.akamaized.net
   - DOMAIN,gamer-cds.cdn.hinet.net
   - DOMAIN,gamer2-cds.cdn.hinet.net
