--- a/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
@@ -28,7 +28,9 @@ payload:
   - DOMAIN,dmqdd6hw24ucf.cloudfront.net
   - DOMAIN,fls-na.amazon.com
   - DOMAIN,ktpx.amazon.com
-  - IP-CIDR,13.32.0.0/15,no-resolve
+  # > Amazon
+  - IP-CIDR,13.32.0.0/16,no-resolve
+  - IP-CIDR,13.33.0.0/16,no-resolve
   - IP-CIDR,13.35.0.0/17,no-resolve
   - IP-CIDR,18.184.0.0/15,no-resolve
   - IP-CIDR,18.194.0.0/15,no-resolve
@@ -43,3 +45,4 @@ payload:
   - IP-CIDR,54.226.0.0/15,no-resolve
   - IP-CIDR,54.230.156.0/22,no-resolve
   - IP-CIDR,54.93.0.0/16,no-resolve
+  - IP-CIDR,13.32.0.0/15,no-resolve
