--- a/Mixin.yaml
+++ b/Mixin.yaml
@@ -4,13 +4,14 @@ mixin: # object
   bind-address: "*"
   mode: rule
   log-level: silent
+  experimental:
+    ignore-resolve-fail: true
+  profile:
+    store-fake-ip: true
   cfw-conn-break-strategy:
     proxy: all
     profile: true
     mode: true
-  cfw-proxies-order: default
-  experimental:
-    ignore-resolve-fail: true
   cfw-bypass:
     - localhost
     - 127.*
@@ -36,100 +37,13 @@ mixin: # object
   dns:
     enable: true
     ipv6: false
-    enhanced-mode: fake-ip #redir-host
-    fake-ip-range: 198.18.0.1/16
-    fake-ip-filter:
-      - '*.126.net'
-      - '*.kuwo.cn'
-      - '*.lan'
-      - '*.linksys.com'
-      - '*.linksyssmartwifi.com'
-      - '*.msftconnecttest.com'
-      - '*.msftncsi.com'
-      - '*.music.163.com'
-      - '*.music.migu.cn'
-      - '*.ntp.org.cn'
-      - '*.openwrt.pool.ntp.org'
-      - '*.time.edu.cn'
-      - '*.xiami.com'
-      - '*.y.qq.com'
-      - '+.battlenet.com.cn'
-      - '+.srv.nintendo.net'
-      - '+.stun.playstation.net'
-      - '+.xboxlive.com'
-      - 'stun.*.*.*'
-      - 'stun.*.*'
-      - "*.alibabacloud.com"
-      - "*.alibabausercontent.com"
-      - "*.alicdn.com"
-      - "*.alicloudccp.com"
-      - "*.aliexpress.com"
-      - "*.aliimg.com"
-      - "*.alikunlun.com"
-      - "*.aliyun.com"
-      - "*.aliyuncdn.com"
-      - "*.aliyuncs.com"
-      - "*.aliyundrive.com"
-      - amobile.music.tc.qq.com
-      - api-jooxtt.sanook.com
-      - api.joox.com
-      - aqqmusic.tc.qq.com
-      - dl.stream.qqmusic.qq.com
-      - heartbeat.belkin.com
-      - isure.stream.qqmusic.qq.com
-      - joox.com
-      - localhost.ptlogin2.qq.com
-      - mobileoc.music.tc.qq.com
-      - music.163.com
-      - music.migu.cn
-      - music.taihe.com
-      - musicapi.taihe.com
-      - ntp.aliyun.com
-      - ntp.ubuntu.com
-      - ntp1.aliyun.com
-      - ntp2.aliyun.com
-      - ntp3.aliyun.com
-      - ntp4.aliyun.com
-      - ntp5.aliyun.com
-      - ntp6.aliyun.com
-      - ntp7.aliyun.com
-      - pool.ntp.org
-      - proxy.golang.org
-      - songsearch.kugou.com
-      - streamoc.music.tc.qq.com
-      - time.apple.com
-      - time.asia.apple.com
-      - time.nist.gov
-      - time.ustc.edu.cn
-      - time.windows.com
-      - time1.aliyun.com
-      - time1.apple.com
-      - time1.cloud.tencent.com
-      - time1.google.com
-      - time2.aliyun.com
-      - time2.apple.com
-      - time2.google.com
-      - time3.aliyun.com
-      - time3.apple.com
-      - time3.google.com
-      - time4.aliyun.com
-      - time4.apple.com
-      - time4.google.com
-      - time5.aliyun.com
-      - time5.apple.com
-      - time6.aliyun.com
-      - time6.apple.com
-      - time7.aliyun.com
-      - time7.apple.com
-      - trackercdn.kugou.com
-      - xbox.*.microsoft.com
-      - y.qq.com
+    listen: 0.0.0.0:53
     default-nameserver:
       - 114.114.114.114
-      - 223.5.5.5
       - 1.2.4.8
       - 8.8.8.8
-      - 8.8.4.4
+    enhanced-mode: fake-ip
+    use-hosts: true
     nameserver:
       - 101.6.6.6
       - tls://dns.alidns.com
@@ -166,10 +80,124 @@ mixin: # object
       - https://public.dns.iij.jp/dns-query
       - https://doh-jp.blahdns.com/dns-query
       - https://dns64.dns.google/dns-query
+    fake-ip-filter:
+      - "*.lan"
+      - "*.localdomain"
+      - "*.example"
+      - "*.invalid"
+      - "*.localhost"
+      - "*.test"
+      - "*.local"
+      - "*.home.arpa"
+      - "time.*.com"
+      - "time.*.gov"
+      - "time.*.edu.cn"
+      - "time.*.apple.com"
+      - "time1.*.com"
+      - "time2.*.com"
+      - "time3.*.com"
+      - "time4.*.com"
+      - "time5.*.com"
+      - "time6.*.com"
+      - "time7.*.com"
+      - "ntp.*.com"
+      - "ntp1.*.com"
+      - "ntp2.*.com"
+      - "ntp3.*.com"
+      - "ntp4.*.com"
+      - "ntp5.*.com"
+      - "ntp6.*.com"
+      - "ntp7.*.com"
+      - "*.time.edu.cn"
+      - "*.ntp.org.cn"
+      - "+.pool.ntp.org"
+      - "music.163.com"
+      - "*.music.163.com"
+      - "*.126.net"
+      - "musicapi.taihe.com"
+      - "music.taihe.com"
+      - "songsearch.kugou.com"
+      - "trackercdn.kugou.com"
+      - "*.kuwo.cn"
+      - "api-jooxtt.sanook.com"
+      - "api.joox.com"
+      - "joox.com"
+      - "y.qq.com"
+      - "*.y.qq.com"
+      - "streamoc.music.tc.qq.com"
+      - "mobileoc.music.tc.qq.com"
+      - "isure.stream.qqmusic.qq.com"
+      - "dl.stream.qqmusic.qq.com"
+      - "aqqmusic.tc.qq.com"
+      - "amobile.music.tc.qq.com"
+      - "*.xiami.com"
+      - "*.music.migu.cn"
+      - "music.migu.cn"
+      - "*.msftconnecttest.com"
+      - "*.msftncsi.com"
+      - "msftconnecttest.com"
+      - "msftncsi.com"
+      - "localhost.ptlogin2.qq.com"
+      - "localhost.sec.qq.com"
+      - "+.srv.nintendo.net"
+      - "+.stun.playstation.net"
+      - "xbox.*.microsoft.com"
+      - "xnotify.xboxlive.com"
+      - "+.battlenet.com.cn"
+      - "+.wotgame.cn"
+      - "+.wggames.cn"
+      - "+.wowsgame.cn"
+      - "+.wargaming.net"
+      - "proxy.golang.org"
+      - "stun.*.*"
+      - "stun.*.*.*"
+      - "+.stun.*.*"
+      - "+.stun.*.*.*"
+      - "+.stun.*.*.*.*"
+      - "heartbeat.belkin.com"
+      - "*.linksys.com"
+      - "*.linksyssmartwifi.com"
+      - "*.router.asus.com"
+      - "mesu.apple.com"
+      - "swscan.apple.com"
+      - "swquery.apple.com"
+      - "swdownload.apple.com"
+      - "swcdn.apple.com"
+      - "swdist.apple.com"
+      - "lens.l.google.com"
+      - "stun.l.google.com"
+      - "+.nflxvideo.net"
+      - "*.square-enix.com"
+      - "*.finalfantasyxiv.com"
+      - "*.ffxiv.com"
+    fallback-filter:
+      geoip: false
+      ipcidr:
+        - 0.0.0.0/8
+        - 10.0.0.0/8
+        - 100.64.0.0/10
+        - 127.0.0.0/8
+        - 169.254.0.0/16
+        - 172.16.0.0/12
+        - 192.0.0.0/24
+        - 192.0.2.0/24
+        - 192.168.0.0/16
+        - 192.88.99.0/24
+        - 198.18.0.0/15
+        - 198.51.100.0/24
+        - 203.0.113.0/24
+        - 224.0.0.0/4
+        - 240.0.0.0/4
+        - 255.255.255.255/32
+      domain:
+        - '+.facebook.com'
+        - '+.githubusercontent.com'
+        - '+.google.com'
+        - '+.youtube.com'
   tun:
     enable: true
-    stack: system
+    stack: system #gvisor system 
     dns-hijack:
       - 198.18.0.2:53
     auto-route: true
-    macOS-auto-detect-interface: true
+    auto-detect-interface: true
